--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,25 @@
 /**app.wxss**/
+page {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: Microsoft YaHei, tahoma, arial;
+}
+
+view,input,button,ul,li{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+input{
+  background: #fff;
+}
+
 .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+}
