--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -168,8 +168,7 @@
         </view>
       </li>
     </ul>
-  </view>
-  <view class="js-hago-search-terms-layer hago-search-terms-layer {{searchTermsLayerAnimationCls}}" hidden="{{showSearchTerms}}">
+  </view><view class="js-hago-search-terms-layer hago-search-terms-layer {{searchTermsLayerAnimationCls}}" hidden="{{showSearchTerms}}" catchanimationend="searchTermsLayerAnimationEnd">
     <view class="hago-search-terms-layer-mask" catchtap="hideSearchTerms"></view>
     <view class="hago-search-terms-layer-cnt">
       <view class="hago-search-terms-group">
