--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -176,24 +176,29 @@
           条件查找
         </view>
         <ul class="hago-search-terms-items-par">
-          <li class="hago-search-terms-item w160 mr44 mb22">冰箱</li>
-          <li class="hago-search-terms-item w160 mr44 mb22">洗衣机</li>
-          <li class="hago-search-terms-item w160 mr44 mb22">空调</li>
-          <li class="hago-search-terms-item w160 mr44 mb22">热水器</li>
-          <li class="hago-search-terms-item w160 mr44 mb22">电视</li>
-          <li class="hago-search-terms-item w160 mr44 mb22">厨电</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">冰箱</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">洗衣机</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">空调</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">热水器</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">电视</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">厨电</li>
         </ul>
       </view>
       <view class="hago-search-terms-group">
         <view class="hago-search-terms-title">
           价格区间
         </view>
-        <view class="hago-search-terms-priceRange">
+        <view class="hago-search-terms-priceRange mb14">
           <input class="hago-search-terms-priceRange-ipt" placeholder="最低价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
           <view class="hago-search-terms-priceRange-hline"></view>
           <input class="hago-search-terms-priceRange-ipt" placeholder="最高价" placeholder-class="hago-search-terms-priceRange-ipt-ph" type="text"/>
         </view>
-        <ul class="hago-search-terms-priceRange-personchoose">
+        <ul class="hago-search-terms-items-par">
+          <li class="hago-search-terms-item w200 mr16 mb14">一级能效</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">智能家电</li>
+          <li class="hago-search-terms-item w200 mr16 mb14">新品</li>
+        </ul>
+        <!--<ul class="hago-search-terms-priceRange-personchoose">
           <li class="hago-search-terms-priceRange-personchoose-item mr14">
             <p class="hago-search-terms-priceRange-personchoose-item-p1">769-1319</p>
             <p class="hago-search-terms-priceRange-personchoose-item-p2">33%的选择</p>
@@ -206,14 +211,14 @@
             <p class="hago-search-terms-priceRange-personchoose-item-p1">3399-6699</p>
             <p class="hago-search-terms-priceRange-personchoose-item-p2">1%的选择</p>
           </li>
-        </ul>
+        </ul>-->
       </view>
-      <ul class="hago-search-terms-items-par mt46">
+      <!--<ul class="hago-search-terms-items-par mt46">
         <li class="hago-search-terms-item w140 mr18">商城在售</li>
         <li class="hago-search-terms-item w140 mr18">商城在售</li>
         <li class="hago-search-terms-item w140 mr18">新品推荐</li>
         <li class="hago-search-terms-item w140 mr18">套购优惠</li>
-      </ul>
+      </ul>-->
     </view>
   </view>
 </view>
